--- a/sample2.yml
+++ b/sample2.yml
@@ -10,7 +10,7 @@ functions:
   "forcetimeout" :
     - command: shell.exec
       params:
-        working_dir: src
+        working_dir: .
         script: |
             sleep 10
   "fetch source" :
@@ -71,7 +71,6 @@ tasks:
 - name: timeout_test
   depends_on: []
   commands:
-    - func: "fetch source"
     - func: "forcetimeout"
 #- name: compile
 #  depends_on: []
