--- a/sample2.yml
+++ b/sample2.yml
@@ -70,7 +70,7 @@ tasks:
       params:
         working_dir: .
         script: |
-          ./run.py timeout_output
+            for i in 1 2 3 4 5 do sleep 1 echo $i done
 #- name: compile
 #  depends_on: []
 #  commands:
