--- a/sample2.yml
+++ b/sample2.yml
@@ -70,7 +70,7 @@ tasks:
       params:
         working_dir: .
         script: |
-            for i in {1..10000} 
+            for i in 1 2 3 4 5 6 7 8 9 10 
             do 
                 sleep 1 
                 echo $i 
